# Vole

./: .gitignore  Cargo.toml  README.md  install.sh
config/: default.json
src/: clean.rs  cli.rs  config.rs  distro.rs  main.rs  options.rs  snapshot.rs  tui.rs
