[package]
name = "vole"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
globset = "0.4"
humansize = "2.1"
ratatui = "0.26"
crossterm = "0.27"
directories = "5.0"
shellexpand = "3.1"
which = "6.0"
libc = "0.2"
